--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
@@ -22,6 +24,8 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
