--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
+    "@types/stripe": "^8.0.416",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -33,6 +35,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.2",
+    "stripe": "^18.4.0",
     "zod": "^3.25.76"
   }
 }
